# grid-generator

./: .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt
doc/: extensions.md  input_file_definition.md
src/: __init__.py  cfg_parser.py  cfg_processor.py  grid.py  grid_drawing_tool.py  layout_generator.py  shape_creator.py  shapes.py
src/exporters/: exporter.py  svg_exporter.py
src/utils/: __init__.py  color.py  converters.py  geometry.py  layout.py  orientation.py  searchable.py  symbols.py  units.py
test/: grid_test.py
test/data/samples/: all_arrows.txt  all_shapes.txt  arrow_edge_to_corners.txt  layouts.txt  sh1-p1.txt  sh1-p2.txt  sh1-p3.txt  sh2-p1.txt  sh2-p2.txt  sh2-p3.txt  text_test.txt
test/utils_tests/: layout_test.py
tests/: color_test.py
tests/test_data/samples/: all_arrows.txt  cfg.yaml  layouts.txt  sh1-p1.txt  sh1-p2.txt  sh1-p3.txt  sh2-p1.txt  sh2-p2.txt  sh2-p3.txt
tests/test_data/utils_tests/: color_test.py  converters_test.py  geometry_test.py
tests/utils_tests/: geometry_test.py
