[project]
name = 'grid generator'
description = 'Python tool to generate shapes in a grid from an simple text representative file.'
version = "1.0"
dynamic = ["version","dependencies"]
authors = [
    {name = "Sylvain Domenjoud", email = "s.domenjoud@gmail.com"},
]
maintainers = [
    {name = "Sylvain Domenjoud", email = "s.domenjoud@gmail.com"},
]
requires-python = ">= 3.13"

[projects.urls]
Homepage = "https://github.com/Sylordis/grid-generator"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = 'test'
# Log
log_cli = true
log_level = 'INFO'
log_format = '%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)'
log_date_format = '%Y-%m-%d %H:%M:%S'
pythonpath = "src"
